Issue #47302 Migrate to Java 17