@@ -22,57 +22,64 @@ public class GraalVMTest {
     public void testGraalVMVersionDetected() {
         // Version detection after: https://github.com/oracle/graal/pull/6302 (3 lines of version output)
         assertVersion(new Version("GraalVM 23.0.0", "23.0.0", GRAALVM), MANDREL,
-                Version.of(Stream.of(("native-image 17.0.6 2023-01-17\n"
-                        + "OpenJDK Runtime Environment Mandrel-23.0.0-dev (build 17.0.6+10)\n"
-                        + "OpenJDK 64-Bit Server VM Mandrel-23.0.0-dev (build 17.0.6+10, mixed mode)").split("\\n"))));
+                Version.of(Stream.of(("""
+                        native-image 17.0.6 2023-01-17
+                        OpenJDK Runtime Environment Mandrel-23.0.0-dev (build 17.0.6+10)
+                        OpenJDK 64-Bit Server VM Mandrel-23.0.0-dev (build 17.0.6+10, mixed mode)""").split("\\n"))));
         assertVersion(new Version("GraalVM 23.0.0", "23.0.0", GRAALVM), MANDREL,
-                Version.of(Stream.of(("native-image 17.0.6 2023-01-17\n"
-                        + "GraalVM Runtime Environment Mandrel-23.0.0-dev (build 17.0.6+10)\n"
-                        + "Substrate VM Mandrel-23.0.0-dev (build 17.0.6+10, serial gc)").split("\\n"))));
+                Version.of(Stream.of(("""
+                        native-image 17.0.6 2023-01-17
+                        GraalVM Runtime Environment Mandrel-23.0.0-dev (build 17.0.6+10)
+                        Substrate VM Mandrel-23.0.0-dev (build 17.0.6+10, serial gc)""").split("\\n"))));
         assertVersion(new Version("GraalVM 23.0.0", "23.0.0", GRAALVM), MANDREL,
-                Version.of(Stream.of(("native-image 17.0.7 2023-04-18\n"
-                        + "OpenJDK Runtime Environment Mandrel-23.0.0.0-Final (build 17.0.7+7)\n"
-                        + "OpenJDK 64-Bit Server VM Mandrel-23.0.0.0-Final (build 17.0.7+7, mixed mode)").split("\\n"))));
+                Version.of(Stream.of(("""
+                        native-image 17.0.7 2023-04-18
+                        OpenJDK Runtime Environment Mandrel-23.0.0.0-Final (build 17.0.7+7)
+                        OpenJDK 64-Bit Server VM Mandrel-23.0.0.0-Final (build 17.0.7+7, mixed mode)""").split("\\n"))));
         // should also work when the image is not around and we have to download it
         assertVersion(new Version("GraalVM 23.0.0", "23.0.0", GRAALVM), MANDREL,
                 Version.of(
-                        Stream.of(("Unable to find image 'quay.io/quarkus/ubi-quarkus-mandrel-builder-image:jdk-17' locally\n"
-                                + "jdk-17: Pulling from quarkus/ubi-quarkus-mandrel-builder-image\n"
-                                + "a49367d57626: Already exists\n"
-                                + "3a83b3d8356a: Already exists\n"
-                                + "d8dd24f2bc88: Already exists\n"
-                                + "99bd64fd6c37: Already exists\n"
-                                + "7a13281b4a63: Already exists\n"
-                                + "ae3db351551e: Already exists\n"
-                                + "eee108cfab2c: Already exists\n"
-                                + "d38abde1651d: Already exists\n"
-                                + "cac4ef5d11c0: Already exists\n"
-                                + "89e5b13e9084: Already exists\n"
-                                + "68897e59054c: Already exists\n"
-                                + "774633828afc: Already exists\n"
-                                + "6708d473f3dc: Already exists\n"
-                                + "4f4fb700ef54: Already exists\n"
-                                + "4f4fb700ef54: Already exists\n"
-                                + "Digest: sha256:2833f8ed2cdfcbdf88134a46b5ab7e4dfee8f7cbde60f819f86e59eb73c2491c\n"
-                                + "Status: Downloaded newer image for quay.io/quarkus/ubi-quarkus-mandrel-builder-image:jdk-17\n"
-                                + "native-image 17.0.7 2023-04-18\n"
-                                + "OpenJDK Runtime Environment Mandrel-23.0.0.0-Final (build 17.0.7+7)\n"
-                                + "OpenJDK 64-Bit Server VM Mandrel-23.0.0.0-Final (build 17.0.7+7, mixed mode)")
+                        Stream.of(("""
+                                Unable to find image 'quay.io/quarkus/ubi-quarkus-mandrel-builder-image:jdk-17' locally
+                                jdk-17: Pulling from quarkus/ubi-quarkus-mandrel-builder-image
+                                a49367d57626: Already exists
+                                3a83b3d8356a: Already exists
+                                d8dd24f2bc88: Already exists
+                                99bd64fd6c37: Already exists
+                                7a13281b4a63: Already exists
+                                ae3db351551e: Already exists
+                                eee108cfab2c: Already exists
+                                d38abde1651d: Already exists
+                                cac4ef5d11c0: Already exists
+                                89e5b13e9084: Already exists
+                                68897e59054c: Already exists
+                                774633828afc: Already exists
+                                6708d473f3dc: Already exists
+                                4f4fb700ef54: Already exists
+                                4f4fb700ef54: Already exists
+                                Digest: sha256:2833f8ed2cdfcbdf88134a46b5ab7e4dfee8f7cbde60f819f86e59eb73c2491c
+                                Status: Downloaded newer image for quay.io/quarkus/ubi-quarkus-mandrel-builder-image:jdk-17
+                                native-image 17.0.7 2023-04-18
+                                OpenJDK Runtime Environment Mandrel-23.0.0.0-Final (build 17.0.7+7)
+                                OpenJDK 64-Bit Server VM Mandrel-23.0.0.0-Final (build 17.0.7+7, mixed mode)""")
                                 .split("\\n"))));
         assertVersion(new Version("GraalVM 23.0", "23.0", GRAALVM), GRAALVM,
-                Version.of(Stream.of(("native-image 20 2023-03-21\n"
-                        + "GraalVM Runtime Environment GraalVM CE (build 20+34-jvmci-23.0-b10)\n"
-                        + "Substrate VM GraalVM CE (build 20+34, serial gc)").split("\\n"))));
+                Version.of(Stream.of(("""
+                        native-image 20 2023-03-21
+                        GraalVM Runtime Environment GraalVM CE (build 20+34-jvmci-23.0-b10)
+                        Substrate VM GraalVM CE (build 20+34, serial gc)""").split("\\n"))));
 
         // Should also work for other unknown implementations of GraalVM
         assertVersion(new Version("GraalVM 23.0", "23.0", GRAALVM), GRAALVM,
-                Version.of(Stream.of(("native-image 20 2023-07-30\n"
-                        + "Foo Runtime Environment whatever (build 20+34-jvmci-23.0-b7)\n"
-                        + "Foo VM whatever (build 20+34, serial gc)").split("\\n"))));
+                Version.of(Stream.of(("""
+                        native-image 20 2023-07-30
+                        Foo Runtime Environment whatever (build 20+34-jvmci-23.0-b7)
+                        Foo VM whatever (build 20+34, serial gc)""").split("\\n"))));
         assertVersion(new Version("GraalVM 23.0", "23.0", GRAALVM), GRAALVM,
-                Version.of(Stream.of(("native-image 20 2023-07-30\n"
-                        + "Another Runtime Environment whatever (build 20+34-jvmci-23.0-b7)\n"
-                        + "Another VM whatever (build 20+34, serial gc)").split("\\n"))));
+                Version.of(Stream.of(("""
+                        native-image 20 2023-07-30
+                        Another Runtime Environment whatever (build 20+34-jvmci-23.0-b7)
+                        Another VM whatever (build 20+34, serial gc)""").split("\\n"))));
 
         // Older version parsing
         assertVersion(new Version("GraalVM 20.1", "20.1", GRAALVM), GRAALVM,
@@ -104,9 +111,10 @@ public class GraalVMTest {
 
     @Test
     public void testGraalVM21LibericaVersionParser() {
-        Version graalVM21Dev = Version.of(Stream.of(("native-image 21.0.1 2023-10-17\n"
-                + "GraalVM Runtime Environment Liberica-NIK-23.1.1-1 (build 21.0.1+12-LTS)\n"
-                + "Substrate VM Liberica-NIK-23.1.1-1 (build 21.0.1+12-LTS, serial gc)").split("\\n")));
+        Version graalVM21Dev = Version.of(Stream.of(("""
+                native-image 21.0.1 2023-10-17
+                GraalVM Runtime Environment Liberica-NIK-23.1.1-1 (build 21.0.1+12-LTS)
+                Substrate VM Liberica-NIK-23.1.1-1 (build 21.0.1+12-LTS, serial gc)""").split("\\n")));
         assertThat(graalVM21Dev.toString()).contains(LIBERICA.name());
         assertThat(graalVM21Dev.getVersionAsString()).isEqualTo("23.1.1");
         assertThat(graalVM21Dev.javaVersion.toString()).isEqualTo("21.0.1+12-LTS");
@@ -116,9 +124,10 @@ public class GraalVMTest {
 
     @Test
     public void testGraalVM21VersionParser() {
-        Version graalVM21Dev = Version.of(Stream.of(("native-image 21 2023-09-19\n"
-                + "GraalVM Runtime Environment GraalVM CE 21+35.1 (build 21+35-jvmci-23.1-b15)\n"
-                + "Substrate VM GraalVM CE 21+35.1 (build 21+35, serial gc)").split("\\n")));
+        Version graalVM21Dev = Version.of(Stream.of(("""
+                native-image 21 2023-09-19
+                GraalVM Runtime Environment GraalVM CE 21+35.1 (build 21+35-jvmci-23.1-b15)
+                Substrate VM GraalVM CE 21+35.1 (build 21+35, serial gc)""").split("\\n")));
         assertThat(graalVM21Dev.toString()).contains(GRAALVM.name());
         assertThat(graalVM21Dev.getVersionAsString()).isEqualTo("23.1");
         assertThat(graalVM21Dev.javaVersion.toString()).isEqualTo("21+35-jvmci-23.1-b15");
@@ -128,9 +137,10 @@ public class GraalVMTest {
 
     @Test
     public void testGraalVM21DevVersionParser() {
-        Version graalVM21Dev = Version.of(Stream.of(("native-image 21 2023-09-19\n" +
-                "GraalVM Runtime Environment GraalVM CE 21-dev+35.1 (build 21+35-jvmci-23.1-b14)\n" +
-                "Substrate VM GraalVM CE 21-dev+35.1 (build 21+35, serial gc)").split("\\n")));
+        Version graalVM21Dev = Version.of(Stream.of(("""
+                native-image 21 2023-09-19
+                GraalVM Runtime Environment GraalVM CE 21-dev+35.1 (build 21+35-jvmci-23.1-b14)
+                Substrate VM GraalVM CE 21-dev+35.1 (build 21+35, serial gc)""").split("\\n")));
         assertThat(graalVM21Dev.toString()).contains(GRAALVM.name());
         assertThat(graalVM21Dev.getVersionAsString()).isEqualTo("23.1-dev");
         assertThat(graalVM21Dev.javaVersion.toString()).isEqualTo("21+35-jvmci-23.1-b14");
@@ -140,9 +150,10 @@ public class GraalVMTest {
 
     @Test
     public void testGraalVM22DevVersionParser() {
-        Version graalVM22Dev = Version.of(Stream.of(("native-image 22 2024-03-19\n"
-                + "GraalVM Runtime Environment GraalVM CE 22-dev+16.1 (build 22+16-jvmci-b01)\n"
-                + "Substrate VM GraalVM CE 22-dev+16.1 (build 22+16, serial gc)").split("\\n")));
+        Version graalVM22Dev = Version.of(Stream.of(("""
+                native-image 22 2024-03-19
+                GraalVM Runtime Environment GraalVM CE 22-dev+16.1 (build 22+16-jvmci-b01)
+                Substrate VM GraalVM CE 22-dev+16.1 (build 22+16, serial gc)""").split("\\n")));
         assertThat(graalVM22Dev.toString()).contains(GRAALVM.name());
         assertThat(graalVM22Dev.getVersionAsString()).isEqualTo("24.0-dev");
         assertThat(graalVM22Dev.javaVersion.toString()).isEqualTo("22+16-jvmci-b01");
@@ -152,9 +163,10 @@ public class GraalVMTest {
 
     @Test
     public void testGraalVMEE22DevVersionParser() {
-        Version graalVMEE22Dev = Version.of(Stream.of(("native-image 22 2024-03-19\n"
-                + "Java(TM) SE Runtime Environment Oracle GraalVM 22-dev+25.1 (build 22+25-jvmci-b01)\n"
-                + "Java HotSpot(TM) 64-Bit Server VM Oracle GraalVM 22-dev+25.1 (build 22+25-jvmci-b01, mixed mode, sharing)")
+        Version graalVMEE22Dev = Version.of(Stream.of(("""
+                native-image 22 2024-03-19
+                Java(TM) SE Runtime Environment Oracle GraalVM 22-dev+25.1 (build 22+25-jvmci-b01)
+                Java HotSpot(TM) 64-Bit Server VM Oracle GraalVM 22-dev+25.1 (build 22+25-jvmci-b01, mixed mode, sharing)""")
                 .split("\\n")));
         assertThat(graalVMEE22Dev.toString()).contains(GRAALVM.name());
         assertThat(graalVMEE22Dev.getVersionAsString()).isEqualTo("24.0-dev");
@@ -165,9 +177,10 @@ public class GraalVMTest {
 
     @Test
     public void testGraalVMEA24DevVersionParser() {
-        final Version graalVMEA24Dev = Version.of(Stream.of(("native-image 24-ea 2025-03-18\n"
-                + "OpenJDK Runtime Environment Oracle GraalVM 24-dev.ea+10.1 (build 24-ea+10-1076)\n"
-                + "OpenJDK 64-Bit Server VM Oracle GraalVM 24-dev.ea+10.1 (build 24-ea+10-1076, mixed mode, sharing)")
+        final Version graalVMEA24Dev = Version.of(Stream.of(("""
+                native-image 24-ea 2025-03-18
+                OpenJDK Runtime Environment Oracle GraalVM 24-dev.ea+10.1 (build 24-ea+10-1076)
+                OpenJDK 64-Bit Server VM Oracle GraalVM 24-dev.ea+10.1 (build 24-ea+10-1076, mixed mode, sharing)""")
                 .split("\\n")));
         assertThat(graalVMEA24Dev.toString()).contains(GRAALVM.name());
         assertThat(graalVMEA24Dev.getVersionAsString()).isEqualTo("24.2-dev");
@@ -178,9 +191,10 @@ public class GraalVMTest {
 
     @Test
     public void testGraalVM23_1CommunityVersionParser() {
-        final Version version = Version.of(Stream.of(("native-image 21.0.5-beta 2024-10-15\n"
-                + "GraalVM Runtime Environment GraalVM CE 21.0.5-dev.beta+3.1 (build 21.0.5-beta+3-ea)\n"
-                + "Substrate VM GraalVM CE 21.0.5-dev.beta+3.1 (build 21.0.5-beta+3-ea, serial gc)")
+        final Version version = Version.of(Stream.of(("""
+                native-image 21.0.5-beta 2024-10-15
+                GraalVM Runtime Environment GraalVM CE 21.0.5-dev.beta+3.1 (build 21.0.5-beta+3-ea)
+                Substrate VM GraalVM CE 21.0.5-dev.beta+3.1 (build 21.0.5-beta+3-ea, serial gc)""")
                 .split("\\n")));
         assertThat(version.toString().contains(GRAALVM.name()));
         assertThat(version.getVersionAsString()).isEqualTo("23.1-dev");
@@ -196,18 +210,24 @@ public class GraalVMTest {
         assertOlderThan("GraalVM Version 20.0.0 (Java Version 11.0.7)", "GraalVM Version 20.1.0 (Java Version 11.0.8)");
         assertOlderThan("GraalVM Version 21.2.0 (Java Version 11.0.12)", Version.VERSION_21_3);
         assertOlderThan("GraalVM Version 21.2.0 (Java Version 11.0.12)", Version.VERSION_21_3_0);
-        assertOlderThan("native-image 21 2023-09-19\n" +
-                "GraalVM Runtime Environment GraalVM CE 21+35.1 (build 21+35-jvmci-23.1-b15)\n" +
-                "Substrate VM GraalVM CE 21+35.1 (build 21+35, serial gc)\n",
-                "native-image 21-beta 2023-09-19\n" +
-                        "OpenJDK Runtime Environment Mandrel-23.1.0.1-devde078ae3bea (build 21-beta+35-ea)\n" +
-                        "OpenJDK 64-Bit Server VM Mandrel-23.1.0.1-devde078ae3bea (build 21-beta+35-ea, mixed mode)");
-        assertOlderThan("native-image 21-beta 2023-09-19\n" +
-                "OpenJDK Runtime Environment Mandrel-23.0.0.1-devde078ae3bea (build 21-beta+35-ea)\n" +
-                "OpenJDK 64-Bit Server VM Mandrel-23.0.0.1-devde078ae3bea (build 21-beta+35-ea, mixed mode)",
-                "native-image 21 2023-09-19\n" +
-                        "GraalVM Runtime Environment GraalVM CE 21+35.1 (build 21+35-jvmci-23.1-b15)\n" +
-                        "Substrate VM GraalVM CE 21+35.1 (build 21+35, serial gc)\n");
+        assertOlderThan("""
+                native-image 21 2023-09-19
+                GraalVM Runtime Environment GraalVM CE 21+35.1 (build 21+35-jvmci-23.1-b15)
+                Substrate VM GraalVM CE 21+35.1 (build 21+35, serial gc)
+                """,
+                """
+                        native-image 21-beta 2023-09-19
+                        OpenJDK Runtime Environment Mandrel-23.1.0.1-devde078ae3bea (build 21-beta+35-ea)
+                        OpenJDK 64-Bit Server VM Mandrel-23.1.0.1-devde078ae3bea (build 21-beta+35-ea, mixed mode)""");
+        assertOlderThan("""
+                native-image 21-beta 2023-09-19
+                OpenJDK Runtime Environment Mandrel-23.0.0.1-devde078ae3bea (build 21-beta+35-ea)
+                OpenJDK 64-Bit Server VM Mandrel-23.0.0.1-devde078ae3bea (build 21-beta+35-ea, mixed mode)""",
+                """
+                        native-image 21 2023-09-19
+                        GraalVM Runtime Environment GraalVM CE 21+35.1 (build 21+35-jvmci-23.1-b15)
+                        Substrate VM GraalVM CE 21+35.1 (build 21+35, serial gc)
+                        """);
     }
 
     /**
@@ -235,12 +255,15 @@ public class GraalVMTest {
         assertCompareEqualTo("GraalVM 21.3.0 Java 11 CE (Java Version 11.0.13+7-jvmci-21.3-b05)",
                 "GraalVM 21.3.0.0.0.0 Java 11 CE (Java Version 11.0.13+7-jvmci-21.3-b05)");
         assertThat(Version.VERSION_21_3.compareTo(Version.VERSION_21_3_0)).isEqualTo(0);
-        assertCompareEqualTo("native-image 21-beta 2023-09-19\n" +
-                "OpenJDK Runtime Environment Mandrel-23.1.0.0-devde078ae3bea (build 21-beta+35-ea)\n" +
-                "OpenJDK 64-Bit Server VM Mandrel-23.1.0.0-devde078ae3bea (build 21-beta+35-ea, mixed mode)",
-                "native-image 21 2023-09-19\n" +
-                        "GraalVM Runtime Environment GraalVM CE 21+35.1 (build 21+35-jvmci-23.1-b15)\n" +
-                        "Substrate VM GraalVM CE 21+35.1 (build 21+35, serial gc)\n");
+        assertCompareEqualTo("""
+                native-image 21-beta 2023-09-19
+                OpenJDK Runtime Environment Mandrel-23.1.0.0-devde078ae3bea (build 21-beta+35-ea)
+                OpenJDK 64-Bit Server VM Mandrel-23.1.0.0-devde078ae3bea (build 21-beta+35-ea, mixed mode)""",
+                """
+                        native-image 21 2023-09-19
+                        GraalVM Runtime Environment GraalVM CE 21+35.1 (build 21+35-jvmci-23.1-b15)
+                        Substrate VM GraalVM CE 21+35.1 (build 21+35, serial gc)
+                        """);
     }
 
     /**
@@ -266,18 +289,24 @@ public class GraalVMTest {
                 "GraalVM 21.3 Java 11 CE (Java Version 11.0.13+7-jvmci-21.3-b05)");
         assertNewerThan("native-image 22.3.0-dev6d51160e2f3 Mandrel Distribution (Java Version 17.0.4-beta+7-202206162318)",
                 "native-image 22.2.0-dev6d51160e2f3 Mandrel Distribution (Java Version 17.0.4-beta+7-202206162318)");
-        assertNewerThan("native-image 21-beta 2023-09-19\n" +
-                "OpenJDK Runtime Environment Mandrel-23.1.0.1-devde078ae3bea (build 21-beta+35-ea)\n" +
-                "OpenJDK 64-Bit Server VM Mandrel-23.1.0.1-devde078ae3bea (build 21-beta+35-ea, mixed mode)",
-                "native-image 21 2023-09-19\n" +
-                        "GraalVM Runtime Environment GraalVM CE 21+35.1 (build 21+35-jvmci-23.1-b15)\n" +
-                        "Substrate VM GraalVM CE 21+35.1 (build 21+35, serial gc)\n");
-        assertNewerThan("native-image 21 2023-09-19\n" +
-                "GraalVM Runtime Environment GraalVM CE 21+35.1 (build 21+35-jvmci-23.1-b15)\n" +
-                "Substrate VM GraalVM CE 21+35.1 (build 21+35, serial gc)\n",
-                "native-image 21-beta 2023-09-19\n" +
-                        "OpenJDK Runtime Environment Mandrel-23.0.0.1-devde078ae3bea (build 21-beta+35-ea)\n" +
-                        "OpenJDK 64-Bit Server VM Mandrel-23.0.0.1-devde078ae3bea (build 21-beta+35-ea, mixed mode)");
+        assertNewerThan("""
+                native-image 21-beta 2023-09-19
+                OpenJDK Runtime Environment Mandrel-23.1.0.1-devde078ae3bea (build 21-beta+35-ea)
+                OpenJDK 64-Bit Server VM Mandrel-23.1.0.1-devde078ae3bea (build 21-beta+35-ea, mixed mode)""",
+                """
+                        native-image 21 2023-09-19
+                        GraalVM Runtime Environment GraalVM CE 21+35.1 (build 21+35-jvmci-23.1-b15)
+                        Substrate VM GraalVM CE 21+35.1 (build 21+35, serial gc)
+                        """);
+        assertNewerThan("""
+                native-image 21 2023-09-19
+                GraalVM Runtime Environment GraalVM CE 21+35.1 (build 21+35-jvmci-23.1-b15)
+                Substrate VM GraalVM CE 21+35.1 (build 21+35, serial gc)
+                """,
+                """
+                        native-image 21-beta 2023-09-19
+                        OpenJDK Runtime Environment Mandrel-23.0.0.1-devde078ae3bea (build 21-beta+35-ea)
+                        OpenJDK 64-Bit Server VM Mandrel-23.0.0.1-devde078ae3bea (build 21-beta+35-ea, mixed mode)""");
     }
 
     /**
@@ -336,26 +365,26 @@ public class GraalVMTest {
         switch (cmp) {
             case "<":
                 Assertions.assertTrue(b.jdkVersionGreaterOrEqualTo(aMinimal),
-                        String.format("JDK %s greater or equal to JDK %s.",
+                        "JDK %s greater or equal to JDK %s.".formatted(
                                 b.javaVersion, a.javaVersion));
                 Assertions.assertFalse(a.jdkVersionGreaterOrEqualTo(bMinimal),
-                        String.format("JDK %s smaller than JDK %s.",
+                        "JDK %s smaller than JDK %s.".formatted(
                                 a.javaVersion, b.javaVersion));
                 break;
             case ">":
                 Assertions.assertTrue(a.jdkVersionGreaterOrEqualTo(bMinimal),
-                        String.format("JDK %s greater or equal to JDK %s.",
+                        "JDK %s greater or equal to JDK %s.".formatted(
                                 a.javaVersion, b.javaVersion));
                 Assertions.assertFalse(b.jdkVersionGreaterOrEqualTo(aMinimal),
-                        String.format("JDK %s smaller than JDK %s.",
+                        "JDK %s smaller than JDK %s.".formatted(
                                 b.javaVersion, a.javaVersion));
                 break;
             case "==":
                 Assertions.assertEquals(0, a.javaVersion.compareToIgnoreOptional(b.javaVersion),
-                        String.format("JDK %s equal to JDK %s.",
+                        "JDK %s equal to JDK %s.".formatted(
                                 b.javaVersion, a.javaVersion));
                 Assertions.assertTrue(a.jdkVersionGreaterOrEqualTo(bMinimal),
-                        String.format("JDK %s greater or equal to JDK %s.",
+                        "JDK %s greater or equal to JDK %s.".formatted(
                                 a.javaVersion, b.javaVersion));
                 break;
             default:
